jobs/job_60783810/uncert/errors/benchmark_602/solver_2.txt
INFO: Pointer analysis took 0 sec 12 ms
input.cc:244:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
input.cc:244:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
input.cc:244:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
3 errors generated.
xe6Z1_Ptr2Arr.c:244:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
xe6Z1_Ptr2Arr.c:244:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
xe6Z1_Ptr2Arr.c:244:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
xe6Z1_Ptr2Arr.c:588:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 3 errors generated.
